--- a/conferences/templates/conferences/404.html
+++ b/conferences/templates/conferences/404.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-    <title> NITW Conf | {{conference.conferenceName}}</title>
+    {% if conference %}
+    <title> NITW Conf | {{conference.conferenceName}} </title>
+    {% else %}
+    <title> NITW Conf | 404 </title>
+    {% endif %}
     <style>
     .navbar {
       margin-bottom: 0;
     }
     .sidebar {
-      background-color: #f5f5f5;
-    }
-    footer{
       background-color: #f5f5f5;
     }
     </style>
@@ -25,18 +25,12 @@
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <div id="navbar" class="navbar-collapse collapse">
-            <a class="navbar-brand" href="#">{{conference.alias}}</a>
 
-            {% if navbar %}
-              <ul class="nav navbar-nav">
-
-                  {% for item in navbar %}
-                     <li> <a href="/conferences/{{ conference.alias }}/{{ item.pageUrl }}"> {{ item.pageName }}</a> </li>
-                  {% endfor %}
-
-              </ul>
+            {% if conference %}
+            <a class="navbar-brand" href="/conferences/{{conference.alias}}">{{conference.alias|upper}}</a>
+            {% else %}
+            <a class="navbar-brand" href="/conferences">NITW Conf</a>
             {% endif %}
-
 
 
 
@@ -46,39 +40,24 @@
 
      <div class ="jumbotron">
         <div class = "container">
-         <h1>{{conference.conferenceName}}</h1>
-         <h6>{{conference.startDate}} to {{conference.endDate}}</h6>
-         <p>
-           {{conference.description}}
-        </p>
+         <h2>Oops! The page you are looking for is not found!</h2>
+
 
        </div>
      </div>
 
      <div class="container">
        <div class="row">
-         <div class="col-md-8">
-           <h2>{{ subpage.pageName }}</h2>
-           <p>
-             {{ subpage.content }}
-               <br><br><br><br><br><br><br><br><br><br><br><br>
+         <div class="col-md-12">
 
-          </p>
+           {% if conference %}
+            Meanwhile you can browse through other pages <a href="/conferences/{{conference.alias}}">here</a>.
+             {% else %}
+            Meanwhile you can browse through other conferences at NIT Warangal <a href="/conferences">here</a>.
+
+           {% endif %}
          </div>
-         <div class="col-md-4 sidebar">
 
-           {% if sidebar %}
-
-            <h2>{{sidebar.pageName}}</h2>
-            {{sidebar.content}}
-
-            {% else %}
-                <h2>Custom sidebar</h2>
-                <p>Add a new subpage to your conference page with pageUrl as sidebar.
-                The contents are displayed here.</p>
-            {% endif %}
-
-         </div>
 
 
        </div>
@@ -88,7 +67,7 @@
 
      <footer class="footer">
        <div class="container">
-        <p>NITW Conference Manager | {{conference.conferenceName}}</p>
+        <p>NITW Conference Manager</p>
        </div>
 
      </footer>
