--- a/conferences/templates/conferences/_main.html
+++ b/conferences/templates/conferences/_main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <title> NITW Conf | {{conference.conferenceName}}</title>
+    <title> NITW Conf </title>
     <style>
     .navbar {
       margin-bottom: 0;
@@ -15,7 +15,14 @@
     .sidebar {
       background-color: #f5f5f5;
     }
+    body{
+      margin-bottom: 20px;
+    }
     footer{
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 20px;
       background-color: #f5f5f5;
     }
     </style>
@@ -25,60 +32,51 @@
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <div id="navbar" class="navbar-collapse collapse">
-            <a class="navbar-brand" href="#">{{conference.alias}}</a>
-
-            {% if navbar %}
-              <ul class="nav navbar-nav">
-
-                  {% for item in navbar %}
-                     <li> <a href="/conferences/{{ conference.alias }}/{{ item.pageUrl }}"> {{ item.pageName }}</a> </li>
-                  {% endfor %}
-
-              </ul>
-            {% endif %}
-
-
-
-
+            <a class="navbar-brand" href="#">NITW Conf</a>
+    <!--        <ul class="nav navbar-nav">
+              <li><a href="#">SUBPAGE1</a></li>
+              <li><a href="#">SUBPAGE2</a></li>
+              <li><a href="#">SUBPAGE3</a></li>
+            </ul>  -->
         </div>
       </div>
     </nav>
 
-     <div class ="jumbotron">
-        <div class = "container">
-         <h1>{{conference.conferenceName}}</h1>
-         <h6>{{conference.startDate}} to {{conference.endDate}}</h6>
-         <p>
-           {{conference.description}}
-        </p>
 
-       </div>
-     </div>
 
      <div class="container">
        <div class="row">
-         <div class="col-md-8">
-           <h2>{{ subpage.pageName }}</h2>
-           <p>
-             {{ subpage.content }}
-               <br><br><br><br><br><br><br><br><br><br><br><br>
 
-          </p>
-         </div>
-         <div class="col-md-4 sidebar">
 
-           {% if sidebar %}
+         <div class="col-md-12">
+           <h2>Upcoming</h2>
 
-            <h2>{{sidebar.pageName}}</h2>
-            {{sidebar.content}}
+            {% if upcoming_confs %}
+              <ul class="list-group">
 
+                  {% for conference in upcoming_confs %}
+                     <li> <a href="/conferences/{{ conference.alias }}"> {{conference.conferenceName}} on  {{conference.startDate}}</a> </li>
+                  {% endfor %}
+
+              </ul>
             {% else %}
-                <h2>Custom sidebar</h2>
-                <p>Add a new subpage to your conference page with pageUrl as sidebar.
-                The contents are displayed here.</p>
+                <p> Sorry. No upcoming conferences.</p>
             {% endif %}
+           <h2>Recent</h2>
+           {% if recent_confs %}
+             <ul class="list-group">
+
+                 {% for conference in recent_confs %}
+                    <li> <a href="/conferences/{{ conference.alias }}"> {{conference.conferenceName}} </a> </li>
+                 {% endfor %}
+
+             </ul>
+           {% else %}
+               <p> Sorry. No recent conferences.</p>
+           {% endif %}
 
          </div>
+
 
 
        </div>
@@ -88,7 +86,7 @@
 
      <footer class="footer">
        <div class="container">
-        <p>NITW Conference Manager | {{conference.conferenceName}}</p>
+        <p>NITW Conference Manager</p>
        </div>
 
      </footer>
