--- a/conferences/templates/conferences/main.html
+++ b/conferences/templates/conferences/main.html
@@ -15,6 +15,21 @@
     .sidebar {
       background-color: #f5f5f5;
     }
+		/* LIST #4 */
+	#list4 { width:320px; font-family:Georgia, Times, serif; font-size:15px; }
+	#list4 ul { list-style: none; }
+	#list4 ul li { }
+	#list4 ul li a { display:block; text-decoration:none; color:#000000; background-color:#FFFFFF; line-height:30px;
+	  border-bottom-style:solid; border-bottom-width:1px; border-bottom-color:#CCCCCC; padding-left:10px; cursor:pointer; }
+	#list4 ul li a:hover { color:gray; background-image:url(../images/hover.png); background-repeat:repeat-x; }
+	#list4 ul li a strong { margin-right:10px; }
+
+	/* LIST #1 */
+	#list1 { }
+	#list1 ul { list-style:none; text-align:center; border-top:1px solid #eee; border-bottom:1px solid #eee; padding:10px 0; }
+	#list1 ul li { display:inline; text-transform:uppercase; padding:0 10px; letter-spacing:10px; }
+	#list1 ul li a { text-decoration:none; color:#eee; }
+	#list1 ul li a:hover { text-decoration:underline; }
     </style>
 </head>
 <body>
@@ -38,34 +53,40 @@
        <div class="row">
 
 
-         <div class="col-md-12">
-           <h2>Upcoming</h2>
+		<center><div class="col-md-12">
+           <div id="list1">
+		   <ul>
+		   <li>Upcoming events</li>
+		   </ul>
+		   </div>
+			<div id="list4">
+      {% if upcoming_confs %}
+			<ul>
+        {% for conference in upcoming_confs %}
+           <li> <a href="/conferences/{{ conference.alias }}"> {{conference.conferenceName}} on  {{conference.startDate}}</a> </li>
+        {% endfor %}
+      </ul>
+      {% else %}
+      <p> Sorry. No upcoming conferences.</p>
+      {% endif %}
+			<hr>
 
-            {% if upcoming_confs %}
-              <ul class="list-group">
+		   <div id="list1">
+		   <ul>
+		   <li>Recent</li>
+		   </ul>
+		   </div>
+       {% if recent_confs %}
+		   <ul>
+         {% for conference in recent_confs %}
+            <li> <a href="/conferences/{{ conference.alias }}"> {{conference.conferenceName}} </a> </li>
+         {% endfor %}
+       </ul>
+     {% else %}
+         <p> Sorry. No recent conferences.</p>
+     {% endif %}
 
-                  {% for conference in upcoming_confs %}
-                     <li> <a href="/conferences/{{ conference.alias }}"> {{conference.conferenceName}} on  {{conference.startDate}}</a> </li>
-                  {% endfor %}
-
-              </ul>
-            {% else %}
-                <p> Sorry. No upcoming conferences.</p>
-            {% endif %}
-           <h2>Recent</h2>
-           {% if recent_confs %}
-             <ul class="list-group">
-
-                 {% for conference in recent_confs %}
-                    <li> <a href="/conferences/{{ conference.alias }}"> {{conference.conferenceName}} </a> </li>
-                 {% endfor %}
-
-             </ul>
-           {% else %}
-               <p> Sorry. No recent conferences.</p>
-           {% endif %}
-
-         </div>
+         </div></center>
 
 
 
@@ -76,7 +97,7 @@
 
      <footer class="footer">
        <div class="container">
-        <p>This is footer text</p>
+        <p>NITW Conference Manager</p>
        </div>
 
      </footer>
