--- a/templates/conference/bctfcs/home.html
+++ b/templates/conference/bctfcs/home.html
@@ -52,6 +52,9 @@
 		            <li>
                         <a href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a href="/bctfcs/register">Register</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -207,6 +210,162 @@
         </div>
         <hr>
 
+        <div class="row">
+            <div class="col-md-12" style="line-height:30px;font-size:17px;">
+                <h2><center><span class="label label-success">Speakers  </span></center></h2><br>
+                <ul>
+                    <li>Speakers from IITs, NITs, Research Labs, Startups and
+                        Industries</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+
+        <div class="col-md-4" id="dates">
+            <h2><center><span class="label label-primary">Important Dates</span></center></h2><br>
+            <table class="table table-hover">
+                <tr class="active">
+                    <td>Application Notification </td>
+                    <td>Oct 10, 2019</td>
+                </tr>
+                <tr class="active">
+                    <td>Last Date for Application :</td>
+                    <td>Oct 30, 2019</td>
+                </tr>  
+                <tr class="active">
+                    <td>Acceptance Notification </td>
+                    <td>Nov 5, 2019</td>
+                </tr> 
+                <tr class="active">
+                    <td>Start of the Programme </td>
+                    <td>Dec 2, 2019</td>
+                </tr> 
+                <tr class="active">
+                    <td>End of the Programme </td>
+                    <td>Dec 14, 2019</td>
+                </tr> 
+            </table>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12" style="line-height:30px;font-size:17px;">
+                <h2><center><span class="label label-success">General Information  </span></center></h2><br>
+                <ul>
+                    <li>Maximum Number of participants is allowed: 30</li>
+                    <li>Registration Fee: No</li>
+                    <li>Free shared accommodation will be provided on prior
+                        intimation</li>
+                    <li>Working lunch, snacks & dinner will be provided</li>
+                    <li>Participants are advised to bring their own Laptops for
+                        experiments</li>
+                    <li>Selection of Participants is based on First Come First
+                        Serve Basis</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12" style="line-height:30px;font-size:17px;">
+                <h2><center><span class="label label-success">Venue   </span></center></h2><br>
+                <ul>
+                    <li>Khurana Seminar Hall, Seminar Complex, Near NITW
+                        Auditorium, National Institute of Technology, </li>
+                </ul>
+                
+            </div>
+        </div>
+        <hr>
+
     </div>
+
+    <footer>
+        <hr>
+           <div style="background-color:#adebeb;font-size:15px;" id="contact">
+               <div class="row">
+               <br>
+                   <div class="col-sm-1"></div>
+                   <div class="col-sm-2">
+                       <a href="http://nitw.ac.in/main/" target="_blank"><img src="{% static 'bs/images/logo.png' %}" height="110px" style="margin-top:20px"></a>
+                   </div>
+                   <div class="col-sm-1"></div>
+                   <div class="col-sm-8" align="left">
+                   <br>
+                       Copyright © 2017 <a class="grey-text text-lighten-4" href="http://wsdc.nitw.ac.in" target="_blank">&nbsp;WSDC&nbsp;</a> All rights reserved.
+                       <span class="right"> Design and Developed by <a class="grey-text text-lighten-4" href="http://wsdc.nitw.ac.in" target="_blank">&nbsp;WSDC</a></span>
+                       <br><br>
+                       <div class="row">
+                           <div class="col-sm-6">
+                               <h4><b>Quick Links:</b></h4>
+                               <a href="http://nitw.ac.in/main/" target="_blank">Institue Main Website</a><br>
+                               <a href="http://www.nitw.ac.in/department/mat/" target="_blank">Department of Mathematics, NIT Warangal</a><br>
+                               <a href="https://wsdc.nitw.ac.in" target="_blank">WSDC, NIT Warangal</a>
+
+                               <br><br>
+                               
+                           </div>
+                           <div class="col-sm-6">
+                               <h4><b>Coordinators & Contact Information:</b></h4>
+                                Dr. E.Suresh Babu,<br>
+                                Assistant Professor,<br>
+                                Dept. of Computer Science & Engineering, <br>
+                                National Institute of Technology, Warangal. <br>
+                                (Email: esbabu@nitw.ac.in), Phone: +91 9440959713. <br> <br>
+                                 Dr. Y.Sreenivasa Rao <br>
+                                Assistant Professor, <br>
+                                Dept. of Mathematcis, <br>
+                                National Institute of Technology, Warangal. <br>
+                                (Email: ysr@nitw.ac.in), Phone: +91 9494776866. <br>
+                           </div>
+                       </div>
+                   </div>
+                    <br><br>
+               </div>
+               <br><br>
+           </div>
+
+       </footer>
+
+       <div id="instructions" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+      
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Instructions</h4>
+            </div>
+            <div class="modal-body">
+              <hr>
+              <h4>Steps to register</h4>
+              <hr>
+              <ol>
+                  <li>Click on register tab at the top</li>
+                  <li>Fill in the details and click on register</li>
+                  <li>Congrats !!! You are succesfully registered on website</li>
+              </ol>
+              <hr><hr>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+      
+        </div>
+      </div>
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      
+        ga('create', 'UA-74103273-3', 'auto');
+        ga('send', 'pageview');
+      
+      </script>
+      
+
 </body>
 </html>
