--- a/templates/conference/bctfcs/register.html
+++ b/templates/conference/bctfcs/register.html
@@ -61,6 +61,7 @@
                 </div>
                 <!-- /.container -->
             </nav>
+	<center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfGsstJDKcmGLbICabmaqjFkJjwHPaAaNJ_nKO29EtS-AGYqA/viewform?embedded=true" width="642" height="2152" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
     
 
             <footer>
