few changes in bctfcs

--- a/templates/conference/bctfcs/home.html
+++ b/templates/conference/bctfcs/home.html
@@ -69,8 +69,8 @@
             </div>
             <div class="col-sm-6">
             <center>
-                <P style="font-size:15px;" >Two Week FDP on Blockchain Technology</P>
-                <p style="font-size:25px;"><b>The Future of Cyber Security (BCTFCS-2019)</b></p>
+                <P style="font-size:23px;"> <b>Two Week FDP on </b></P>
+                <p style="font-size:23px;"><b>Blockchain Technology - The Future of Cyber Security (BCTFCS-2019)</b></p>
                 <p style="font-size:20px;"><b>BCTFCS-2019</b></p>
                 <p style="font-size:23px; color:red;">Sponsored by ICPS Division of DST, Govt. of India</p>
                 <!-- <img src="{% static 'bs/images/logo.png' %}" style="height:150px; width:200px"> -->
@@ -91,13 +91,13 @@
             <!-- /.col-md-8 -->
             <div class="col-md-6">
                 <center><h3 style="color:blue;"><b>December 2 - 14 2019</b></h3>
-                <h4>
+                <h4><b>
                      Organised by<br><hr>
-                    DEPARTMENT OF Computer Science and Engineering<br><br>
+                    Department of Computer Science and Engineering<br>
                     National Institute of Technology Warangal<br>
                     Warangal 506 004. <br>
                     Telangana State, India.
-                </h4></center>
+                </b></h4></center>
             </div>
             <!-- /.col-md-4 -->
         </div>
@@ -135,7 +135,7 @@
         <div class="row">
             <div class="col-md-12" style="line-height:30px;font-size:17px;">
                 <h2><center><span class="label label-success">Topics to be Covered( but not limited to )</span></center></h2><br>
-               <div class="col-md-offset-4 col-md-5">
+               <div class="col-md-offset-3 col-md-7">
                <li>Blockchain Theory-Distributed Ledger Technologies (DLT)</li>
                <li>Permissioned and Permissionless Blockchains</li>
                <li>Model, framework, and mechanism in designing blockchain</li>
@@ -313,11 +313,11 @@
                                 Dept. of Computer Science & Engineering, <br>
                                 National Institute of Technology, Warangal. <br>
                                 (Email: esbabu@nitw.ac.in), Phone: +91 9440959713. <br> <br>
-                                 Dr. Y.Sreenivasa Rao <br>
+                                 Dr. Ilaiah Kavati <br>
                                 Assistant Professor, <br>
-                                Dept. of Mathematcis, <br>
+                                Dept. of Computer Science & Engineering,<br>
                                 National Institute of Technology, Warangal. <br>
-                                (Email: ysr@nitw.ac.in), Phone: +91 9494776866. <br>
+                                (Email: ilaiahkavati@nitw.ac.in), Phone: +91 9848916272. <br>
                            </div>
                        </div>
                    </div>
